--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <h3>Contact Me</h3>
   <ul>
-    <li>Email: <a href="liu.wenbo@northeastern.edu">liu.wenbo@northeastern.edu</a></li>
+    <li>Email: liu.wenbo@northeastern.edu</li>
     <li>Phone: 2024159331</li>
     <li>Mailing address: <a href="https://www.google.com/maps/place/The+Grad+San+Jose/
         @37.3322364,-121.8873539,17z/data=!4m13!1m7!3m6!1s0x808fccba18e1ab35:0xe27bb68f7cb
