--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <form action="mailto:liuwenbo921@gmail.com" method="post" enctype="text/plain">
     <label for="">Your Name:</label>
     <input type="text" name="yourName" value=""><br>
-    <label for="">Your Email</label>
+    <label for="">Your Email:</label>
     <input type="email" name="yourEmail" value=""><br>
     <label for="">Your Message: </label><br>
     <textarea name="name" rows="10" cols="30"></textarea><br>
